# SKR-Media-Viewer

./: CMakeLists.txt  README.md  checkboxfilesystem.cpp  checkboxfilesystem.h  customfiletree.cpp  customfiletree.h  filemanager.cpp  filemanager.h  folderordersort.cpp  folderordersort.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediadialog.cpp  mediadialog.h  mediadialog.ui  slideshow.cpp  slideshow.h  slideshow.ui
